--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.reachmedia.ad.reachmediaad.MainActivity"
-    android:background="@android:color/background_dark">
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
 
-    <VideoView
-        android:id="@+id/vv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
-
-    <!--<ImageView-->
-        <!--android:id="@+id/iv"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:scaleType="fitCenter"/>-->
-    <TextView
-        android:id="@+id/tv"
-        android:textColor="@android:color/white"
+    <Button
+        android:id="@+id/bt_video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_red_dark"/>
+        android:text="视频测试"
+        android:visibility="gone"/>
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/bt_six"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="6张轮播"/>
+
+    <Button
+        android:id="@+id/bt_four"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="4张轮播"/>
+
+    <Button
+        android:id="@+id/bt_distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="信号测试"/>
+
+</LinearLayout>
