--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,10 @@
     </style>
 
     <style name="RedButtonStyle">
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_height">300dp</item>
         <item name="android:textColor">@drawable/tab_text_color</item>
-        <item name="android:textSize">25sp</item>
+        <item name="android:textSize">75sp</item>
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
         <item name="android:background">@drawable/red_btn_selector</item>
