change video qrcode png.

--- a/app/src/main/res/layout/activity_static_video_download.xml
+++ b/app/src/main/res/layout/activity_static_video_download.xml
@@ -14,8 +14,8 @@
         android:layout_centerInParent="true"/>
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:src="@mipmap/download_video"/>
