--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,11 @@
             style="@style/RedButtonStyle"
             android:layout_marginLeft="20dp"/>
 
+        <Button
+            android:id="@+id/bt_ad"
+            android:text="现场Beta"
+            style="@style/RedButtonStyle"
+            android:layout_marginLeft="20dp"/>
         <!--<Button-->
             <!--android:id="@+id/bt_distance"-->
             <!--android:text="信号\n测试"-->
@@ -45,7 +50,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center">
         <Button
             android:id="@+id/bt_hongbao"
             android:text="新手\n红包"
@@ -62,6 +68,19 @@
             android:text="下载\n视频"
             style="@style/RedButtonStyle"
             android:layout_marginLeft="20dp"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <Button
+            android:id="@+id/bt_test"
+            android:text="系统测试"
+            style="@style/RedButtonStyle"/>
+
+
 
     </LinearLayout>
 
