--- a/app/src/main/res/layout/activity_beta_ad.xml
+++ b/app/src/main/res/layout/activity_beta_ad.xml
@@ -12,8 +12,7 @@
             android:id="@+id/iv_one"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter"
-            android:src="@mipmap/img_1"/>
+            android:scaleType="fitCenter"/>
 
     </RelativeLayout>
 
